--- a/workflow-templates/draft-release.yml
+++ b/workflow-templates/draft-release.yml
@@ -2,7 +2,8 @@ name: Draft Release
 
 on:
   push:
-    - $default-branch
+    branches:
+      - $default-branch
 
   pull_request:
     branches:
@@ -14,4 +15,4 @@ on:
 
 jobs:
   launch:
-    uses: madronejs/.github/.github/workflows/draft-release.hml@main
+    uses: madronejs/.github/.github/workflows/draft-release.yml@main
